<resources>
    <string name="app_name">WhatsappClone</string>
    <string name="emailField">Email:</string>
    <string name="emailFieldHint">teste@teste.com</string>
    <string name="passwordField">Senha:</string>
    <string name="loginButtonText">Login</string>
    <string name="txt_password_hint">1234</string>
    <string name="loginErrorNotify">Erro ao fazer o login</string>
    <string name="emptyEditTextNotify">Por favor digite seu email e senha</string>
    <string name="signUpPitchText">Ainda não está cadastrado ?</string>
    <string name="btnSignUpText">Cadastrar</string>
    <string name="signUpErrorNotify">Erro ao tentar realizar o cadastro.</string>
    <string name="btn_signupTxt">Cadastrar</string>
    <string name="errorPassTooSmall">A senha deve ter pelo menos 6 digitos</string>
    <string name="btn_logout_text">Deslogar</string>
    <string name="txt_forgotPass">Esqueci minha senha&#8230;</string>
    <string name="recoverPassNeedEmail">Por favor digite seu email</string>
    <string name="recoverEmailSent">Cheque seu email para recuperar sua senha</string>
    <string name="PermissionDeniedTitle">Permissão negada</string>
    <string name="PermissionDeniedMessage">Para a aplicação funcinar corretamnte é necessario confirmar as permissões</string>
    <string name="PermissionDeniedButton">Confirmar</string>
    <string name="txtNameSignUp">Nome:</string>
    <string name="hintName">Testinho SIlveira</string>
    <string name="weakPass">A senha deve conter pelo menos 6 digitos</string>
    <string name="invalidEmail">Email inválido.</string>
    <string name="collisionEmail">Um usuário com esse email já existe.</string>
    <string name="unkownError">Verifique sua conexão e tente novamente.</string>
    <string name="wrongPass">Email ou senha incorreto.</string>
    <string name="unkownUser">Usuário inexistente.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="conversationTitle">Conversas</string>
    <string name="contactsTitle">CONTATOS</string>
</resources>
