<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="52dp"
        android:text="@string/emailField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="@string/emailFieldHint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/txt_email"
        app:layout_constraintTop_toBottomOf="@+id/txt_email"
        android:theme="@style/editTextStandard"
        android:autofillHints="username"/>

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/passwordField"
        app:layout_constraintStart_toStartOf="@+id/editText_email"
        app:layout_constraintTop_toBottomOf="@+id/editText_email" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editText_email"
        app:layout_constraintStart_toStartOf="@+id/txt_password"
        app:layout_constraintTop_toBottomOf="@+id/txt_password"
        android:theme="@style/editTextStandard"
        android:autofillHints="password"/>

    <Button
        android:id="@+id/btn_loginEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/loginButtonText"
        app:layout_constraintEnd_toEndOf="@+id/editText_password"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="@+id/editText_password"
        app:layout_constraintTop_toBottomOf="@+id/editText_password" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnSignUpText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtSignUpPitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:text="@string/signUpPitchText"
        app:layout_constraintBottom_toBottomOf="@+id/btnSignUp"
        app:layout_constraintEnd_toStartOf="@+id/btnSignUp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnSignUp"
        app:layout_constraintVertical_bias="0.642" />

    <TextView
        android:id="@+id/txt_forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/txt_forgotPass"
        android:textAllCaps="false"
        android:textColor="@color/colorLink"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_loginEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toEndOf="@+id/btn_loginEmail"
        app:layout_constraintTop_toTopOf="@+id/btn_loginEmail" />


</android.support.constraint.ConstraintLayout>